--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  padding-bottom: 50px;
 }
 .header .contact{
   color: #fff;
@@ -19,6 +18,7 @@
   height: 100%;
   width: 100%;
   background-color:rgba(5, 5, 5, 0.3);
+  padding-bottom: 50;
 }
 .head-row{
   width: 100%;
