--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   height: 100%;
   width: 100%;
   background-color:rgba(5, 5, 5, 0.3);
-  padding-bottom: 50;
+  padding-bottom: 50px;
 }
 .head-row{
   width: 100%;
